--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   photo_view: ^0.15.0
   cached_network_image: ^3.4.1
   flutter_riverpod: ^2.6.1
+  carousel_slider: ^5.1.1
+  dots_indicator: ^4.0.1
 
 dev_dependencies:
   flutter_test:
