--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ repository: https://github.com/superxabc/flutter_feed_media.git
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.0.3+3
 
 environment:
   sdk: ^3.5.4
@@ -34,7 +34,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  better_player: ^0.0.84
+  better_player: ^0.0.84  # Reverted to pub version
   photo_view: ^0.15.0
   cached_network_image: ^3.4.1
   flutter_riverpod: ^2.6.1
